QMAPS fix dots alignment in itinerary panel Desktop

--- a/src/scss/includes/direction-form.scss
+++ b/src/scss/includes/direction-form.scss
@@ -68,7 +68,7 @@
       background-repeat: no-repeat;
 
       @media (min-width: 641px) {
-        background-position: 30px calc(50% - 7px), 30px calc(50%), 30px calc(50% + 7px);
+        background-position: 26px calc(50% - 7px), 26px calc(50%), 26px calc(50% + 7px);
       }
     }
   }
